--- a/libraries/core/build.gradle
+++ b/libraries/core/build.gradle
@@ -5,6 +5,17 @@ apply plugin: "kotlin-kapt"
 
 apply from: "../../test_dependencies.gradle"
 
+android {
+    // Compose
+    buildFeatures {
+        compose true
+    }
+    composeOptions {
+        kotlinCompilerExtensionVersion Versions.androidx_compose
+        kotlinCompilerVersion Versions.kotlin
+    }
+}
+
 dependencies {
     // KOTLIN
     implementation Dependencies.kotlin
@@ -32,6 +43,18 @@ dependencies {
     implementation Dependencies.androidx_navigation_fragment_ktx
     implementation Dependencies.androidx_navigation_ui_ktx
     implementation Dependencies.androidx_recyclerview
+
+    // COMPOSE
+    implementation Dependencies.androidx_compose_ui
+    implementation Dependencies.androidx_compose_material
+    implementation Dependencies.androidx_compose_materialIconsExtended
+    implementation Dependencies.androidx_compose_runtime
+    implementation Dependencies.androidx_compose_savedInstanceState
+    implementation Dependencies.androidx_compose_liveData
+    implementation Dependencies.androidx_compose_foundation
+    implementation Dependencies.androidx_compose_layout
+    implementation Dependencies.androidx_compose_tooling
+    implementation Dependencies.androidx_compose_test
 
     // ROOM
     implementation Dependencies.androidx_room_runtime
